// Vitest Snapshot v1

exports[`PullDownRefresh > PullDownRefresh baseVue demo works fine 1`] = `
<div
  class="t-pull-down-refresh"
  data-v-9c770ec0=""
>
  <div
    class="t-pull-down-refresh__track t-pull-down-refresh__track--loosing"
    style="transform: translate3d(0, 0px, 0);"
  >
    <div
      class="t-pull-down-refresh__tips"
      style="height: 80px;"
    >
      <div
        class="t-pull-down-refresh__loading"
        style="transform: translateY(7px); height: 0px; max-height: 66px;"
      >
        <div
          class="t-pull-down-refresh__text"
        />
      </div>
    </div>
    
    <!-- 包裹页面全部内容 -->
    <div
      class="tdesign-mobile-demo"
      data-v-9c770ec0=""
    >
      <div
        class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
        data-v-9c770ec0=""
      >
        <!--v-if-->
        <div
          class="tdesign-mobile-demo-block__slot"
        >
          
          <h1
            class="title"
            data-v-9c770ec0=""
          >
            PullDownRefresh 下拉刷新
          </h1>
          <p
            class="summary"
            data-v-9c770ec0=""
          >
            用于快速刷新页面信息，刷新可以是整页刷新也可以是页面的局部刷新。
          </p>
          <div
            class="tdesign-mobile-block"
            data-v-9c770ec0=""
          >
            拖拽该区域演示 顶部下拉刷新
          </div>
          <div
            class="group"
            data-v-9c770ec0=""
          >
            
            <div
              class="t-skeleton item"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 100px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                />
                
              </div>
              
            </div>
            <div
              class="t-skeleton item"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 100px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                />
                
              </div>
              
            </div>
            <div
              class="t-skeleton item"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 100px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                />
                
              </div>
              
            </div>
            <div
              class="t-skeleton item"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 100px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                />
                
              </div>
              
            </div>
            <div
              class="t-skeleton item"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 100px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                />
                
              </div>
              
            </div>
            <div
              class="t-skeleton item"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 100px;"
                />
                
              </div>
              <div
                class="t-skeleton__row"
              >
                
                <div
                  class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                />
                
              </div>
              
            </div>
            
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`PullDownRefresh > PullDownRefresh loadingTextsVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-pull-down-refresh"
      >
        <div
          class="t-pull-down-refresh__track t-pull-down-refresh__track--loosing"
          style="transform: translate3d(0, 0px, 0);"
        >
          <div
            class="t-pull-down-refresh__tips"
            style="height: 100px;"
          >
            <div
              class="t-pull-down-refresh__loading"
              style="transform: translateY(15px); height: 0px; max-height: 70px;"
            >
              <div
                class="t-pull-down-refresh__text"
              />
            </div>
          </div>
          
          下拉刷新
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`PullDownRefresh > PullDownRefresh mobileVue demo works fine 1`] = `
<div>
  <div
    class="t-pull-down-refresh"
    data-v-9c770ec0=""
  >
    <div
      class="t-pull-down-refresh__track t-pull-down-refresh__track--loosing"
      style="transform: translate3d(0, 0px, 0);"
    >
      <div
        class="t-pull-down-refresh__tips"
        style="height: 80px;"
      >
        <div
          class="t-pull-down-refresh__loading"
          style="transform: translateY(7px); height: 0px; max-height: 66px;"
        >
          <div
            class="t-pull-down-refresh__text"
          />
        </div>
      </div>
      
      <!-- 包裹页面全部内容 -->
      <div
        class="tdesign-mobile-demo"
        data-v-9c770ec0=""
      >
        <div
          class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
          data-v-9c770ec0=""
        >
          <!--v-if-->
          <div
            class="tdesign-mobile-demo-block__slot"
          >
            
            <h1
              class="title"
              data-v-9c770ec0=""
            >
              PullDownRefresh 下拉刷新
            </h1>
            <p
              class="summary"
              data-v-9c770ec0=""
            >
              用于快速刷新页面信息，刷新可以是整页刷新也可以是页面的局部刷新。
            </p>
            <div
              class="tdesign-mobile-block"
              data-v-9c770ec0=""
            >
              拖拽该区域演示 顶部下拉刷新
            </div>
            <div
              class="group"
              data-v-9c770ec0=""
            >
              
              <div
                class="t-skeleton item"
                data-v-9c770ec0=""
              >
                
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 100px;"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                  />
                  
                </div>
                
              </div>
              <div
                class="t-skeleton item"
                data-v-9c770ec0=""
              >
                
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 100px;"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                  />
                  
                </div>
                
              </div>
              <div
                class="t-skeleton item"
                data-v-9c770ec0=""
              >
                
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 100px;"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                  />
                  
                </div>
                
              </div>
              <div
                class="t-skeleton item"
                data-v-9c770ec0=""
              >
                
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 100px;"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                  />
                  
                </div>
                
              </div>
              <div
                class="t-skeleton item"
                data-v-9c770ec0=""
              >
                
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 100px;"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                  />
                  
                </div>
                
              </div>
              <div
                class="t-skeleton item"
                data-v-9c770ec0=""
              >
                
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 100px;"
                  />
                  
                </div>
                <div
                  class="t-skeleton__row"
                >
                  
                  <div
                    class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
                    style="width: 165.5px; height: 165.5px; border-radius: 12px;"
                  />
                  
                </div>
                
              </div>
              
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`PullDownRefresh > PullDownRefresh timeoutVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-pull-down-refresh"
      >
        <div
          class="t-pull-down-refresh__track t-pull-down-refresh__track--loosing"
          style="transform: translate3d(0, 0px, 0);"
        >
          <div
            class="t-pull-down-refresh__tips"
            style="height: 80px;"
          >
            <div
              class="t-pull-down-refresh__loading"
              style="transform: translateY(15px); height: 0px; max-height: 50px;"
            >
              <div
                class="t-pull-down-refresh__text"
              />
            </div>
          </div>
          
          下拉刷新
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
